--- a/frontend/src/Aside.css
+++ b/frontend/src/Aside.css
@@ -1,7 +1,8 @@
 aside {
+    width: 40vw;
     background: #FFF;
-    padding: 5% 5%;
-    width: 30vw;
+    padding: 25px 25px;
+    margin: 50px 20px
 }
 
 aside strong {
