--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    justify-content: center;
 }
 
 label, input {
@@ -17,4 +18,25 @@ label, input {
 
 .longitude, .latitude {
     display: inline-block;
+}
+
+@media (max-width: 900px) {
+    #app {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #app aside {
+        width: 90vw;
+    }
+
+    #app main {
+        width: 90vw;
+        margin-top: 0;
+    }
+
+    
+
+   
 }
