--- a/frontend/src/Aside.css
+++ b/frontend/src/Aside.css
@@ -1,7 +1,7 @@
 aside {
     width: 30vw;
     background: #FFF;
-    padding: 25px 25px;
+    padding: 25px 25px 10px 25px;
     margin: 50px 20px
 }
 
